# PyGrace

pygrace/: .gitignore  README.md  pyproject.toml  setup.cfg
pygrace/examples/: README.md  open_errorbar_plot.sh  open_example_plot.sh
pygrace/examples/data/: errorbars_y.csv
pygrace/scripts/: dev_setup.sh
pygrace/src/pygrace/: __init__.py  backend.py  cli.py  data.py  gui.py
pygrace/src/pygrace/plugins/: __init__.py  linear_regression.py  types.py  y_equals_x.py
pygrace/tests/: test_backend.py  test_cli.py  test_data.py
