[metadata]
name = pygrace
version = 0.1.0
description = PyGrace Python package.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    matplotlib>=3.7
    PySide6>=6.5

[options.entry_points]
console_scripts =
    xmgrace = pygrace.cli:main
    pygrace = pygrace.cli:main

[options.packages.find]
where = src
